--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<body>
 		<!-- start adding new tags here -->
 		<div class="postcard">
-			Hello
 			<div class="postcard-header">
 				<h1>My postcard</h1>
 				<img
@@ -17,8 +16,18 @@
 				/>
 			</div>
 			<div class="postcard-body">
-				<div class="body-left">I am the left side</div>
-				<div class="body-right">I am the right side</div>
+				<div class="body-left">
+					<p>Diez amigos nos hemos reunido para elaborar cada uno un cuento de máximo 20 palabras cuyo título es: La isla imaginaria.</p>
+					<p>
+						Al final encontrarán los enlaces a los espacios de los otros nueve participantes para que por favor, pasen y lean sus
+						historias".
+					</p>
+				</div>
+				<div class="body-right">
+					<input placeholder="Ingrese Nombre:" id="Nombre" /><br /><br />
+					<input placeholder="Ingrese Email:" type="email" id="mail" /><br /><br />
+					<input placeholder="Ingrese Comentario:" type="text" id="Comentario" />
+				</div>
 			</div>
 			<div class="postcard-footer"><button>Send My Postcard</button></div>
 		</div>
